--- a/index.html
+++ b/index.html
@@ -19,17 +19,14 @@
         </nav>
     </header>
 
-    <figure class="background-image">
-    </figure>
-
     <main class="content">
-        <section class="search-engine-optimization">
+        <section class="content-section search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO Notebook"/>
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </section>
 
-        <section class="online-reputation-management">
+        <section class="content-section online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Laptop"/>
             <h2>Online Reputation Management</h2>
             <p>
@@ -37,7 +34,7 @@
             </p>
         </section>
 
-        <section class="social-media-marketing">
+        <section class="content-section social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing Table"/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -47,35 +44,28 @@
     </main>
 
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-item">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation Cog"/>
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
+            <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
         </div>
-        <div class="benefit-brand">
+
+        <div class="benefit-item">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Bulb"/>
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
+            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
         </div>
-        <div class="benefit-cost">
+
+        <div class="benefit-item">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost Management Coins"/>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
+            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </div>
     </aside>
     
     <footer class="footer">
-        <h4>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
+        <h4>Made with ❤️️ by Horiseon</h4>
+        <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
 </body>
-
 </html>
